# mapping-tools

./: .gitignore  235.js  Cargo.toml  Makefile  index.js
.github/workflows/: build-web.yml
mapping-tools-cli/: Cargo.toml
mapping-tools-cli/src/: main.rs
mapping-tools-qt/: .gitignore  mainwindow.ui  mapping-tools-qt  mapping-tools-qt.pro  mapping-tools-qt_en_US.ts  moc_predefs.h  ui_mainwindow.h
mapping-tools-web/: Cargo.toml  package-lock.json  package.json  webpack.config.js
mapping-tools-web/src/: lib.rs
mapping-tools-web/static/: index.html
src/: c.rs  lib.rs  main.rs  metadata.rs
src/hitsounds/: copier.rs  mod.rs
